--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="speechincoherent.github.io/style.css"
 <html>
     <head>
 <title>hi</title>
