--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="speechincoherent.github.io/style.css"
+<link rel="stylesheet" type="text/css" href="/style.css"
 <html>
     <head>
 <title>hi</title>
