--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <title>hi</title>
     </head>
     <body>
-<p>hola</p>
+<h1>hello there</h1>
+<p>welome to my website, please dont judge the weird colors n such</p>
+<br>
+<p>everythings so dark...</p>
+<br>
+<br>
+<a href="zodiahk.com">visit this guy's website</a>
     </body>
 </html>
