--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <link rel="stylesheet" type="text/css" href="/style.css"
 <html>
     <head>
+        <style>
+            h1 {
+                color:antiquewhite;
+                border-bottom: antiquewhite;
+            }
+        </style>
 <title>hi</title>
     </head>
     <body>
