--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
                 color:antiquewhite;
                 border-bottom: antiquewhite;
             }
+            a:link. {
+    color:antiquewhite
+}
+
+a:hover {
+    text-decoration: underline;
+    text-shadow: #ffffff;
+}
+
+a:visited {
+    text-decoration: underline;
+    color: lightskyblue
+}
         </style>
 <title>hi</title>
     </head>
@@ -17,6 +30,6 @@
 <p>everythings so dark...</p>
 <br>
 <br>
-<a href="zodiahk.com">visit this guy's website</a>
+<a href="https://zodiahk.com">visit this guy's website</a>
     </body>
 </html>
