--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                 color:antiquewhite;
                 border-bottom: antiquewhite;
             }
-            a:link. {
+            a:link {
     color:antiquewhite
 }
 
@@ -29,6 +29,7 @@ a:visited {
 <br>
 <p>everythings so dark...</p>
 <br>
+<p>if only something could <a href="bright.html">brighten it up</a>...</p>
 <br>
 <a href="https://zodiahk.com">visit this guy's website</a>
     </body>
