--- a/bright.html
+++ b/bright.html
@@ -3,7 +3,7 @@
     <head>
         <style>
             body {
-                color:antiquewhite
+                color:black
             }
             a:visited {
                 color:lightskyblue
