--- a/bright.html
+++ b/bright.html
@@ -3,7 +3,9 @@
     <head>
         <style>
             body {
-                color:black
+                color:black;
+                font-family: Arial, Helvetica, sans-serif;
+                
             }
             a:visited {
                 color:lightskyblue
