--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="/style.css"
 <html>
     <head>
-<title>hi</title>
+<title>hello</title>
     </head>
     <body>
 <h1>hello there</h1>
