--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>hello</title>
     </head>
     <body>
-<h1>hello there</h1>
+<h1 style="font-family: Arial, Helvetica, sans-serif;">hello there</h1>
 <p>welome to my website, please dont judge the weird colors n such</p>
 <br>
 <p>everythings so dark...</p>
