--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <br>
 <p>if only something could <a href="bright.html">brighten it up</a>...</p>
 <br>
-<a href="https://zodiahk.com">visit this guy's website</a>
+<a href="links.html">links</a>
+<br>
+<a href="https://zodiahk.com">visit this other guy's website</a>
     </body>
 </html>
