--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br>
 <p>if only something could <a href="bright.html">brighten it up</a>...</p>
 <br>
-<a href="links.html">links</a>
+<p><a href="links.html">links</a> for other stuff</p>
 <br>
 <a href="https://zodiahk.com">visit this other guy's website</a>
     </body>
