--- a/links.html
+++ b/links.html
@@ -9,5 +9,16 @@
 <h6 style="color:antiquewhite; font-family: Arial, Helvetica, sans-serif;">no links yet, sorry!</h6>
 <br>
 <a href="index.html">go back</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p style="color:black;">okay, you got me.</p> <br>
+<a style="color:black;" href="shh.html">very secret page</a>
     </body>
 </html>
