again again (way too much)

--- a/index.html
+++ b/index.html
@@ -16,4 +16,5 @@
 <br>
 <a href="https://zodiahk.com">visit this other guy's website</a>
     </body>
+    <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=154708&s=10' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter"></a></small></div>
 </html>
