--- a/links.html
+++ b/links.html
@@ -6,7 +6,10 @@
     </head>
     <body>
 <h1 style="align-self:center;"> links to other parts of the website </h1>
-<h6 style="color:antiquewhite; font-family: Arial, Helvetica, sans-serif;">no links yet, sorry!</h6>
+<a href="bright.html
+"button"></button>
+<br>
+</a>
 <br>
 <a href="index.html">go back</a>
 <br>
