--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <p><a href="links.html">links</a> for other stuff</p>
 <br>
 <a href="https://zodiahk.com">visit this other guy's website</a>
+<p>⬇ number of losers that have seen this site</p>
     </body>
     <div align='left'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=154708&s=10' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter"></a></small></div>
 </html>
