--- a/links.html
+++ b/links.html
@@ -28,7 +28,7 @@
 <br>
 <br>
 <br>
-<p style="color:black;">okay, you got me.</p> <br>
+<p style="color:black;">okay, you got me.</p>
 <a style="color:black;" href="shh.html">very secret page</a>
     </body>
 </html>
