--- a/links.html
+++ b/links.html
@@ -6,10 +6,7 @@
     </head>
     <body>
 <h1 style="align-self:center;"> links to other parts of the website </h1>
-<a href="bright.html
-"button"></button>
-<br>
-</a>
+<a href=""></a>
 <br>
 <a href="index.html">go back</a>
 <br>
