--- a/fellas.html
+++ b/fellas.html
@@ -12,5 +12,7 @@
         <a>brian/alain</a>
         <a>orange "fucking" triangle</a>
         <a>wille e. coyote (willitanimations)</a>
+        <br>
+        <a href="index.html">go back</a>
     </body>
 </html>
