--- a/links.html
+++ b/links.html
@@ -6,7 +6,8 @@
     </head>
     <body>
 <h1 style="align-self:center;"> links to other parts of the website </h1>
-<a href=""></a>
+<a href="contact.html">contact</a>
+<a href="fellas.html">the fellas</a>
 <br>
 <a href="index.html">go back</a>
 <br>
@@ -25,7 +26,6 @@
 <br>
 <br>
 <br>
-<p style="color:black;">okay, you got me.</p>
 <a style="color:black;" href="shh.html">very secret page</a>
     </body>
 </html>
