--- a/fellas.html
+++ b/fellas.html
@@ -7,11 +7,11 @@
     <body>
         <h2>this page is dedicated to all the nice people ive met so far, and zodi.</h2>
         <p>⬇links⬇</p>
-        <a>zodiahk</a>
-        <a>lynn (berryred)</a>
-        <a>brian/alain</a>
-        <a>orange "fucking" triangle</a>
-        <a>wille e. coyote (willitanimations)</a>
+        <a>zodiahk</a> <br>
+        <a>lynn (berryred)</a> <br>
+        <a>brian/alain</a> <br>
+        <a>orange "fucking" triangle</a> <br>
+        <a>wille e. coyote (willitanimations)</a> <br>
         <br>
         <a href="index.html">go back</a>
     </body>
