--- a/fellas.html
+++ b/fellas.html
@@ -7,7 +7,7 @@
     <body>
         <h2>this page is dedicated to all the nice people ive met so far, and zodi.</h2>
         <p>⬇links⬇</p>
-        <a>zodiahk</a> <br>
+        <a href="fellas/zodi.html">zodiahk</a> <br>
         <a>lynn (berryred)</a> <br>
         <a>brian/alain</a> <br>
         <a>orange "fucking" triangle</a> <br>
