--- a/fellas/zodi.html
+++ b/fellas/zodi.html
@@ -12,8 +12,9 @@
         <br>
         <br>
         <h1>zodiahk quote hall of fame</h1>
-        <img src="assets/zodi quote 1.png">
+        <img src="assets/zodi quote 1.png"><br>
         <img src="assets/zodi quote 2.png">
+        <br>
         <br>
     <a href="../fellas.html">go back</a>
     </body>
