--- a/fellas/zodi.html
+++ b/fellas/zodi.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <p>very cool person, great friend, kinda fuckin sad though</p>
-            <img class="img2" alt="cretin (18500BC)" src="assets/zodi profile pictur.png">
+            <img alt="cretin (18500BC)" src="assets/zodi profile pictur.png">
              <p>^this guy has violated the geneva convention more than 975 times in the last five hours</p> 
         <br>
         <br>
