--- a/fellas/zodi.html
+++ b/fellas/zodi.html
@@ -6,14 +6,17 @@
     </head>
     <body>
         <p>very cool person, great friend, kinda fuckin sad though</p>
+        <p>be sure to wish this man a birthday on <a href="https://nationaltoday.com/national-read-a-book-day/">september 6th</a></p>
             <img alt="cretin (18500BC)" src="assets/zodi profile pictur.png">
              <p>^this guy has violated the geneva convention more than 975 times in the last five hours</p> 
         <br>
+        <a href="https://www.zodiahk.com">go visit this guy's website</a>
         <br>
         <br>
         <h1>zodiahk quote hall of fame</h1>
         <img src="assets/zodi quote 1.png"><br>
         <img src="assets/zodi quote 2.png">
+        <img src="assets/zodi quote 3.png">
         <br>
         <br>
     <a href="../fellas.html">go back</a>
