funny audio! laugh now!

--- a/fellas/zodi.html
+++ b/fellas/zodi.html
@@ -15,8 +15,12 @@
         <br>
         <h1>zodiahk quote hall of fame</h1>
         <img src="assets/zodi quote 1.png"><br>
-        <img src="assets/zodi quote 2.png">
-        <img src="assets/zodi quote 3.png">
+        <img src="assets/zodi quote 2.png"><br>
+        <img src="assets/zodi quote 3.png"><br>
+        <audio controls>
+            <source src="assets/zodi quote audio 1.ogg" type="audio/ogg">
+            SWITCH TO A DIFFERENT BROWSER YOU NONCE
+        </audio>
         <br>
         <br>
     <a href="../fellas.html">go back</a>
