--- a/testing97.html
+++ b/testing97.html
@@ -7,6 +7,8 @@
         <body>
             <p id="one">before</p>
             <button type="button" onclick="lol()">transition</button>
-
+            <br>
+            <button type="button" onclick="showtoday()"></button>
+            <p id="two"></p>
         </body>
     </html>
