--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 <h1 style="align-self:center;"> links to other parts of the website </h1>
-<a href="contact.html">contact</a><br>
+<a href="contact.html">contact</a><br><br>
 <a href="fellas.html">the fellas</a>
 <br>
 <br>
