--- a/testing97.html
+++ b/testing97.html
@@ -8,7 +8,7 @@
             <p id="one">before</p>
             <button type="button" onclick="lol()">transition</button>
             <br>
-            <button type="button" onclick="showtoday()"></button>
-            <p id="two"></p>
+            <button type="button" onclick="showtoday()">show date</button>
+            <p id="two"> </p>
         </body>
     </html>
