WHY IS THIS SO FUCKING HARD-

--- a/testing97.html
+++ b/testing97.html
@@ -8,7 +8,7 @@
             <p id="one">before</p>
             <button type="button" onclick="lol()">transition</button>
             <br>
-            <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">show date</button>
-            <p id="two"> </p>
+            <button type="button" onclick="document.getElementById("two").innerHTML = Date()">show date</button>
+            <p id="two"></p>
         </body>
     </html>
