--- a/testing97.html
+++ b/testing97.html
@@ -8,7 +8,8 @@
             <p id="one">before</p>
             <button type="button" onclick="lol()">transition</button>
             <br>
-            <button type="button" onclick="document.getElementById("two").innerHTML = Date()">show date</button>
-            <p id="two"></p>
+           <div>
+            <button type="button" onclick="document.write(x)">press for funny</button>
+           </div>
         </body>
     </html>
