--- a/links.html
+++ b/links.html
@@ -7,7 +7,8 @@
     <body>
 <h1 style="align-self:center;"> links to other parts of the website </h1>
 <a href="contact.html">contact</a><br><br>
-<a href="fellas.html">the fellas</a>
+<a href="fellas.html">the fellas</a><br><br>
+<a href="/puzzle/start.html">you like games?</a>
 <br>
 <br>
 <a href="index.html">go back</a>
