--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <script src="random.js"></script>
-        <img id="titleRandom" style="align-content:center;">
+        <img id="titleRandom" style="align-content:center;" src= >
         <a class="puzzleIntroLink">play game</a><br><br>
         <a class="puzzleIntroLink">go back</a>
 </body>
