--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -4,8 +4,23 @@
     <title>start</title>
 </head>
 <body>
-    <script src="random.js"></script>
-        <img id="titleRandom" style="align-content:center;" src= >
+    <script>var x = Math.floor(Math.random*5)+1;
+        if (x = 1) {
+            Document.getElementById("titleRandom").src= "../assets/puzzle/title-1.png";
+        }
+        else if (x = 2) {
+            Document.getElementById("titleRandom").src= "../assets/puzzle/title-2.png";
+        } 
+        else if (x = 3) {
+            Document.getElementById("titleRandom").src= "../assets/puzzle/titulo-3.png";
+        } 
+        else if (x = 4) {
+            Document.getElementById("titleRandom").src= "../assets/puzzle/title-4.png";
+        } 
+        else if (x = 5) {
+            Document.getElementById("titleRandom").src= "../assets/puzzle/title-5.png";
+        } </script>
+        <img id="titleRandom" style="align-content:center;" src="../fellas/assets/puzzle/title-1.png" >
         <a class="puzzleIntroLink">play game</a><br><br>
         <a class="puzzleIntroLink">go back</a>
 </body>
