--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <script>
-        window.onload = randomTitle
+        window.onload = randomTitle()
         var x = Math.floor(Math.random*5)+1;
         function randomTitle() {if (x = 1) {
             Document.getElementById("titleRandom").src= "../assets/puzzle/title-1.png";
@@ -25,7 +25,7 @@
         <div class="puzDiv">
         <img id="titleRandom" style="align-content:center;" src="../fellas/assets/puzzle/title-1.png" >
         <a class="puzzleIntroLink">play game</a><br><br>
-        <a class="puzzleIntroLink">go back</a>
+        <a class="puzzleIntroLink" href="../">go back</a>
         </div>
 </body>
 </html>
