--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -4,24 +4,13 @@
     <title>start</title>
 </head>
 <body>
-    <script>
-        window.onload = randomTitle()
-        var x = Math.floor(Math.random*5)+1;
-        function randomTitle() {if (x = 1) {
-            Document.getElementById("titleRandom").src= "../assets/puzzle/title-1.png";
-        }
-        else if (x = 2) {
-            Document.getElementById("titleRandom").src= "../assets/puzzle/title-2.png";
-        } 
-        else if (x = 3) {
-            Document.getElementById("titleRandom").src= "../assets/puzzle/titulo-3.png";
-        } 
-        else if (x = 4) {
-            Document.getElementById("titleRandom").src= "../assets/puzzle/title-4.png";
-        } 
-        else if (x = 5) {
-            Document.getElementById("titleRandom").src= "../assets/puzzle/title-5.png";
-        }} </script>
+    <script>window.onload = choosePic;
+
+        var myPix = new Array("/puzzle/title-1.png","/puzzle/title-2.png","/puzzle/titulo-3.png","/puzzle/title-4.png","/puzzle/title-5.png",);
+        
+        function choosePic() {
+             var randomNum = Math.floor(Math.random() * myPix.length);
+             document.getElementById("myPicture").src = myPix[randomNum];}</script>
         <div class="puzDiv">
         <img id="titleRandom" style="align-content:center;" src="../fellas/assets/puzzle/title-1.png" >
         <a class="puzzleIntroLink">play game</a><br><br>
