I FUCKING HATE CSS DIVS

--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -11,10 +11,10 @@
         function choosePic() {
              var randomNum = Math.floor(Math.random() * myPix.length);
              document.getElementById("titleRandom").src = myPix[randomNum];}</script>
-        <div class="puzDiv">
+        <div class="puzDiv container">
         <img id="titleRandom" style="align-content:center;" src="/puzzle/title-1.png" >
         </div>
-        <a class="puzzleIntroLink" href="one.html">play game</a><br><br>
-        <a class="puzzleIntroLink" href="../">go back</a>
+        <a href="one.html">play game</a><br><br>
+        <a href="../">go back</a>
 </body>
 </html>
