forgot to link soz

--- a/fellas.html
+++ b/fellas.html
@@ -10,7 +10,7 @@
         <a href="fellas/zodi.html">zodiahk</a> <br>
         <a>lynn (berryred)</a> <br>
         <a>brian/alain</a> <br>
-        <a>orange "fucking" triangle</a> <br>
+        <a href="fellas/orangetriangle.html">orange "fucking" triangle</a> <br>
         <a>wille e. coyote (willitanimations)</a> <br>
         <br>
         <a href="index.html">go back</a>
