--- a/fellas/orangetriangle.html
+++ b/fellas/orangetriangle.html
@@ -14,8 +14,8 @@
             <br>
             <br>
             <h1>orange's words of wisdom</h1>
-            <img src="assets/orange quote 1"><br>
-            <img src="assets/orange quote 2"><br>
-            <img src="assets/orange quote 3"><br>
+            <img src="assets/orange quote 1.png"><br>
+            <img src="assets/orange quote 2.png"><br>
+            <img src="assets/orange quote 3.png"><br>
     </body>
 </html>
