--- a/puzzle/one.html
+++ b/puzzle/one.html
@@ -4,6 +4,8 @@
         <title>one</title>
     </head>
     <body>
-        <p>not yet!</p>
+        <div class="containter"><img title="what number is missing" src="game/one.png"></div>
+        <p class="puzzle">i wonder what comes after one</p>
+        <p class="puzzle" style="font-size:small">change url to your answer, no capital letters, no numbers (unless specified)</p>
     </body>
 </html>
