--- a/404.html
+++ b/404.html
@@ -1,7 +1,8 @@
+<link rel="stylesheet" type="text/css" href="/style.css">
 <head>
     <title>dead end</title>
 </head>
 <body>
     <p style="font-size: large; text-align:center;">you done gone to the wrong place my g</p>
-    <a href="index.html">go back</a>
+    <a style="font-size: large; text-align:center;" href="index.html">go back</a>
 </body>
