BIG IMAGE JUMPSCARE

--- a/puzzle/one.html
+++ b/puzzle/one.html
@@ -4,7 +4,7 @@
         <title>one</title>
     </head>
     <body>
-        <div class="containter"><img title="what number is missing" src="game/one.png"></div>
+        <div class="containter"><img title="what number is missing" src="game/one.png" style="width:700px; height:500px;"></div>
         <p class="puzzle">i wonder what comes after one</p>
         <p class="puzzle" style="font-size:small">change url to your answer, no capital letters, no numbers (unless specified)</p>
     </body>
