--- a/puzzle/two.html
+++ b/puzzle/two.html
@@ -3,7 +3,13 @@
     <head>
         <title>two</title>
     </head>
+    <script src="two.js"></script>
     <body>
-        <p>not yet!</p>
+        <div class="container puzzle">
+            <p class="puzzle">(number of next puzzle) + (number of previous puzzle) - (number of horns on a unicorn)</p><br>
+            <p class="puzzle" id="output">answer down here ⬇</p>
+        <input type="text" id="input" value="insert here">
+        <button onclick="numberChecker()" type="button">done</button>
+    </div>
     </body>
 </html>
