--- a/puzzle/two.html
+++ b/puzzle/two.html
@@ -8,8 +8,8 @@
         <div class="container puzzle">
             <p class="puzzle">(number of next puzzle) + (number of previous puzzle) - (number of horns on a unicorn)</p><br>
             <p class="puzzle" id="output">answer down here ⬇</p>
-        <input type="text" id="input" value="insert here">
-        <button onclick="numberChecker()" type="button">done</button>
+        <input style="align-content:center;" type="text" id="input" value="insert here">
+        <button style="align-content:center;" onclick="numberChecker()" type="button">done</button>
     </div>
     </body>
 </html>
