--- a/puzzle/eerht.html
+++ b/puzzle/eerht.html
@@ -4,7 +4,10 @@
         <title>hwat?</title>
     </head>
     <body>
+        <div class="container puzzle">
+        <img src="game/three.png">
         <p class="puzzle">oh no, it seems the url is wrong</p><br>
         <p class="puzzle">fix it.</p>
+    </div>
     </body>
 </html>
