--- a/puzzle/eerht.html
+++ b/puzzle/eerht.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="container puzzle">
-        <img src="game/three.png">
+        <img style="width:700px; height:500px;" src="game/three.png">
         <p class="puzzle">oh no, it seems the url is wrong</p><br>
         <p class="puzzle">fix it.</p>
     </div>
