--- a/puzzle/three.html
+++ b/puzzle/three.html
@@ -4,6 +4,9 @@
         <title>redirect</title>
     </head>
     <script>
-        window.onload = window.location.replace = "https://speechincoherent.github.io/puzzle/four.html"
+        window.onload = redirect()
+        function redirect(){
+        window.location.replace = "https://speechincoherent.github.io/puzzle/four.html"
+        }
     </script>
 </html>
