--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <p><a href="links.html">links</a> for other stuff</p>
 <br>
 <p>⬇ number of losers that have seen this site</p>
-<div align='left'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=154708&s=10' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter"></a></small></div>
-<p style="font-size: small;">site update 86</p>
+<div style="align-self:left;"><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=154708&s=10' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter"></a></small></div>
+<p style="font-size: small;">site update 87</p>
     </body>
 </html>
