--- a/puzzle/three.html
+++ b/puzzle/three.html
@@ -8,7 +8,9 @@
     </body>
     <script>
         window.onload = redirect();
+        redirect() {
         sleep (1);
         window.location.href = "https://speechincoherent.github.io/puzzle/four.html";
+        }
     </script>
 </html>
