--- a/puzzle/three.html
+++ b/puzzle/three.html
@@ -8,7 +8,7 @@
     </body>
     <script>
         window.onload = redirect();
-        redirect() {
+        redirect(); {
         sleep (1);
         window.location.href = "https://speechincoherent.github.io/puzzle/four.html";
         }
