--- a/puzzle/three.html
+++ b/puzzle/three.html
@@ -8,8 +8,7 @@
     </body>
     <script>
         window.onload = redirect();
-        redirect(); {
-        sleep (1);
+        function redirect() {
         window.location.href = "https://speechincoherent.github.io/puzzle/four.html";
         }
     </script>
