--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="../sp.ico">
+    <link rel="stylesheet" type="text/css" href="style.css">
 <html>
     <head>
         <title>talk to me</title>
