--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <title>hello</title>
     </head>
     <body>
+        <script src="redirects.js"></script>
+        <div class="btngroup">
+            <button onclick="redirectLinks()">links</button>
+            <button onclick="redirectContact()">contact</button>
+            <button disabled>bog</button>
+        </div>
 <h1 style="font-family: Arial, Helvetica, sans-serif;">hello there</h1>
 <p>welome to my website, please dont judge the weird colors n such</p>
 <hr>
@@ -13,10 +19,9 @@
 <br>
 <p>if only something could <a href="bright.html">brighten it up</a>...</p>
 <br>
-<p><a href="links.html">links</a> for other stuff</p>
 <br>
 <p>⬇ number of losers that have seen this site</p>
 <div style="align-self:left;"><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=154708&s=10' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter"></a></small></div>
-<p style="font-size: small;">site update 89</p>
+<p style="font-size: small;">site update 90</p>
     </body>
 </html>
