--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <p>welome to my website, please dont judge the weird colors n such</p>
 <hr>
 <div class="btngroup">
-    <button onclick="redirectLinks()">links</button>
-    <button onclick="redirectContact()">contact</button>
-    <button disabled>bog</button>
+    <button class="main" onclick="redirectLinks()">links</button>
+    <button class="main" onclick="redirectContact()">contact</button>
+    <button class="main" disabled>bog</button>
+<br>
+<br>
 <p>everythings so dark...</p>
 <br>
 <p>if only something could <a href="bright.html">brighten it up</a>...</p>
