--- a/puzzle/eerht.html
+++ b/puzzle/eerht.html
@@ -6,6 +6,7 @@
     <body>
         <div class="container puzzle">
         <img style="width:700px; height:500px;" src="game/three.png">
+        </div>
         <p class="puzzle">oh no, it seems the url is wrong</p><br>
         <p class="puzzle">fix it.</p>
     </div>
