--- a/puzzle/three.html
+++ b/puzzle/three.html
@@ -10,7 +10,7 @@
     <script>
         window.onload = redirect();
         function redirect() {
-        window.location.href = "https://speechincoherent.github.io/puzzle/four.html";
+        window.location.href = "https://speechincoherent.github.io/puzzle/hex.html";
         }
     </script>
 </html>
