--- a/puzzle/two.html
+++ b/puzzle/two.html
@@ -7,10 +7,11 @@
     <script src="two.js"></script>
     <body>
         <div class="container puzzle">
-            <p class="puzzle">(number of next puzzle) + (number of previous puzzle) - (number of horns on a unicorn)</p><br>
+            <img src="game/two.png" alt="1, 2....">
+        </div>
             <p class="puzzle" id="output">answer down here ⬇</p>
-        <input style="align-content:center;" type="text" id="input" value="insert here">
-        <button style="align-content:center;" onclick="numberChecker()" type="button">done</button>
+        <input style="align-self:center;" type="number" id="input" placeholder="enter here">
+        <button style="align-self:center;" onclick="numberChecker()" type="button">done</button>
     </div>
     </body>
 </html>
