--- a/puzzle/hex.html
+++ b/puzzle/hex.html
@@ -5,6 +5,9 @@
         <title>four?</title>
     </head>
     <body>
-        <p class="puzzle">not yet!</p>
+        <div class="container puzzle">
+        <img src="game/hex.png" alt="6D 6F 75 6E 74 61 69 6E 20 64 6F 74 20 68 74 6D 6C">
+        </div>
+        <p class="puzzle">translate</p>
     </body>
 </html>
