huge js changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <div class="btngroup">
     <button class="main" onclick="redirectLinks()">links</button>
     <button class="main" onclick="redirectContact()">contact</button>
-    <button class="main" disabled>bog</button>
+    <button class="main" onclick="redirectGame()">game</button>
+    <button class="main" disabled>blog</button>
 <br>
 <br>
 <p>everythings so dark...</p>
