--- a/puzzle/two.html
+++ b/puzzle/two.html
@@ -4,7 +4,7 @@
     <head>
         <title>two</title>
     </head>
-    <script src="two.js"></script>
+    <script src="../main.js"></script>
     <body>
         <div class="container puzzle">
             <img src="game/two.png" alt="1, 2....">
