--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>hello</title>
     </head>
     <body>
-        <script src="redirects.js"></script>
+        <script src="main.js"></script>
         </div>
 <h1 style="font-family: Arial, Helvetica, sans-serif;">hello there</h1>
 <p>welome to my website, please dont judge the weird colors n such</p>
