im not telling you

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <button class="main" onclick="redirectContact()">contact</button>
     <button class="main" onclick="redirectGame()">game</button>
     <button class="main" disabled>blog</button>
+</div>
 <br>
 <br>
 <p>everythings so dark...</p>
