--- a/links.html
+++ b/links.html
@@ -7,8 +7,9 @@
     </head>
     <body>
 <h1 style="align-self:center;"> links to other parts of the website </h1>
-<a href="fellas.html">the fellas</a><br><br>
-<a href="/puzzle/start.html">you like games?</a>
+<a href="fellas.html">the fellas</a>
+<br>
+<br>
 <br>
 <br>
 <a href="index.html">go back</a>
