--- a/puzzle/epic.html
+++ b/puzzle/epic.html
@@ -7,6 +7,9 @@
         </title>
     </head>
     <body>
-        <p class="puzzle">not yet!</p>
+        <div class="container puzzle">
+            <img src="game/epic.png">
+        </div>
+        <p class="puzzle">epic</p>
     </body>
 </html>
