not telling u *kiss kiss*

--- a/school_stuff/origins.html
+++ b/school_stuff/origins.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 <link rel="stylesheet" type="text/css" href="fadeInScript.css">
-<link rel="icon" href="sp.ico">
+<link rel="icon" href="../sp.ico">
 <html>
     <head>
         <title>
