--- a/school_stuff/origins.html
+++ b/school_stuff/origins.html
@@ -10,7 +10,7 @@
     <body>
 	<script src="fadeInScript.js"></script>
         <h1 style="align-self:center;">My origins</h1>
-        <h6>Poem by William Lin</h6>
+        <h4>Poem by William Lin</h4>
         <hr>
     <pre style="font-family:'Times New Roman', Times, serif;">
         I am from cigarettes,
@@ -44,8 +44,8 @@
     </pre>
     <br><br><br>
     <p>the following is a bunch of images of stuff in the poem, please dont really grade this part karo im begging you please (jk)</p>
-	<FadeInSection>
+	<div class="fade-in-section">
 		<img src="funnycollage.png" alt="if you dont see an image then too bad (just kidding)" title="hii">
-	</FadeInSection>
+	</div>
 </body>
 </html>
