--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,12 @@
     </head>
     <body>
         <h1 style="text-align: center;">contact info (for the government)</h1>
-        <p>discord: wilwithaone</p> <br>
+        <p>discord: i actually forgot</p> <br>
         <p>OTHER discord: speech2nd</p> <br>
         <p>youtube channel: not telling you</p>
         <p>phone number: 911</p> <br>
         <p>hotel: trivago</p>
-        <p>pizza: hut</p>
+        <p>pizza: hut</p> <br>
+        <p>address: </p>
     </body>
 </html>
