--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button class="main" onclick="redirectLinks()">links</button>
     <button class="main" onclick="redirectContact()">contact</button>
     <button class="main" onclick="redirectGame()">game</button>
-    <button class="main" disabled>blog</button>
+    <button class="main" onclick="redirectBlog()">blog</button>
 </div>
 <br>
 <br>
