--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,15 @@
     </head>
     <body>
         <h1 style="text-align: center;">contact info (for the government)</h1>
+        <hr>
+        <div class="btngroup">
+            <button class="main" onclick="redirectLinks()">links</button>
+            <button class="main" type="disabled">contact</button>
+            <button class="main" onclick="redirectGame()">game</button>
+            <button class="main" onclick="redirectBlog()">blog</button>
+            <button class="main" onclick="redirectHome()">home</button>
+        </div>
+        <br>
         <p>discord: i actually forgot</p> <br>
         <p>OTHER discord: speech2nd</p> <br>
         <p>youtube channel: not telling you</p>
