--- a/links.html
+++ b/links.html
@@ -7,6 +7,15 @@
     </head>
     <body>
 <h1 style="align-self:center;"> links to other parts of the website </h1>
+<hr>
+<div class="btngroup">
+    <button class="main" type="disabled">links</button>
+    <button class="main" onclick="redirectContact()">contact</button>
+    <button class="main" onclick="redirectGame()">game</button>
+    <button class="main" onclick="redirectBlog()">blog</button>
+    <button class="main" onclick="redirectHome()">home</button>
+</div>
+<br>
 <a href="fellas.html">the fellas</a>
 <br>
 <br>
