--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <button class="main" onclick="redirectContact()">contact</button>
     <button class="main" onclick="redirectGame()">game</button>
     <button class="main" onclick="redirectBlog()">blog</button>
+    <button class="main" type="disabled">home</button>
 </div>
 <br>
 <br>
