--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -6,8 +6,16 @@
 </head>
 <body>
     <script src="img changer.js"></script>
+    <div class="btngroup">
+        <button class="main" onclick="redirectLinks()">links</button>
+        <button class="main" onclick="redirectContact()">contact</button>
+        <button class="main" type="disabled">game</button>
+        <button class="main" onclick="redirectBlog()">blog</button>
+        <button class="main" onclick="redirectHome()">home</button>
+    </div>
+    <br>
         <div class="puzDiv container">
-        <img id="titleRandom" alt="" style="align-content:center;" src="/puzzle/title-1.png" >
+        <img id="titleRandom" alt="no" style="align-content:center;" src="/puzzle/title-1.png" >
         </div>
         <a href="one.html">play game</a><br><br>
         <a href="../">go back</a>
