--- a/404.html
+++ b/404.html
@@ -4,6 +4,6 @@
     <title>dead end</title>
 </head>
 <body>
-    <p style="font-size: large; text-align:center;">you done gone to the wrong place my g</p>
+    <p style="font-size: large; text-align:center;">no.</p>
     <a style="font-size: large; text-align:center;" href="index.html">go back</a>
 </body>
