too many fixes plus blog

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <html>
     <head>
         <title>talk to me</title>
+        <script src="main.js"></script>
     </head>
     <body>
         <h1 style="text-align: center;">contact info (for the government)</h1>
@@ -16,7 +17,7 @@
             <button class="main" onclick="redirectHome()">home</button>
         </div>
         <br>
-        <p>discord: i actually forgot</p> <br>
+        <p>discord: wilwithouttheone</p> <br>
         <p>OTHER discord: speech2nd</p> <br>
         <p>youtube channel: not telling you</p>
         <p>phone number: 911</p> <br>
