--- a/links.html
+++ b/links.html
@@ -4,6 +4,7 @@
 <html>
     <head>
 <title>links</title>
+<script src="main.js"></script>
     </head>
     <body>
 <h1 style="align-self:center;"> links to other parts of the website </h1>
@@ -15,6 +16,7 @@
     <button class="main" onclick="redirectBlog()">blog</button>
     <button class="main" onclick="redirectHome()">home</button>
 </div>
+<br>
 <br>
 <a href="fellas.html">the fellas</a>
 <br>
