--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -5,7 +5,9 @@
     <title>start</title>
 </head>
 <body>
+    <script src="main.js"></script>
     <script src="img changer.js"></script>
+    <br>
     <div class="btngroup">
         <button class="main" onclick="redirectLinks()">links</button>
         <button class="main" onclick="redirectContact()">contact</button>
