--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -5,7 +5,7 @@
     <title>start</title>
 </head>
 <body>
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
     <script src="img changer.js"></script>
     <br>
     <div class="btngroup">
