--- a/puzzle/epic.html
+++ b/puzzle/epic.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container puzzle">
-            <img src="game/epic.png">
+            <img src="game/epic.png"> <!-- whats another file extension for images -->
         </div>
         <p class="puzzle">epic</p>
     </body>
