--- a/puzzle/two.html
+++ b/puzzle/two.html
@@ -6,7 +6,7 @@
     </head>
     <script src="../main.js"></script>
     <body>
-        <div class="container puzzle">
+        <div class="container puzzle" style="width:auto;">
             <img src="game/two.png" alt="1, 2....">
         </div>
             <p class="puzzle" id="output">answer down here ⬇</p>
