--- a/puzzle/two.html
+++ b/puzzle/two.html
@@ -8,10 +8,10 @@
     <body>
         <div class="container puzzle" style="max-width: 50%;">
             <img src="game/two.png" alt="1, 2....">
-        </div>
+        
             <p class="puzzle" id="output">answer down here ⬇</p>
-        <input style="align-self:center;" type="number" id="input" placeholder="enter here">
-        <button style="align-self:center;" onclick="numberChecker()" type="button">done</button>
+        <input type="number" id="input" placeholder="enter here">
+        <button onclick="numberChecker()" type="button">done</button>
     </div>
     </body>
 </html>
