--- a/puzzle/epic.html
+++ b/puzzle/epic.html
@@ -8,8 +8,9 @@
     </head>
     <body>
         <div class="container puzzle">
-            <img src="game/epic.png"> <!-- whats another file extension for images -->
+            <img src="game/epic.png" alt="rgb?">
         </div>
         <p class="puzzle">epic</p>
+        <!--numbers into letters how-->
     </body>
 </html>
