--- a/puzzle/sws.html
+++ b/puzzle/sws.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div clas="container puzzle">
-
+            <img src="game/where.png">
         </div>
         <p class="puzzle">where is this?</p>
         <!--city name into url-->
