level 8? + fixed color

--- a/puzzle/swansea.html
+++ b/puzzle/swansea.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="puzzle container">
-            <img src="" alt="">
+            <img src="/puzzle/game/swansea.png" alt="whats this piece of land called?">
         </div>
         <p class="puzzle">gorgos</p>
     </body>
