huge update (level 8)

--- a/puzzle/swansea.html
+++ b/puzzle/swansea.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div class="puzzle container">
-            <img src="/puzzle/game/swansea.png" alt="whats this piece of land called?">
+            <img src="game/swansea.png" alt="no spaces, first png does not count">
         </div>
-        <p class="puzzle">gorgos</p>
+        <p class="puzzle">slight difficulty spike sorry</p>
     </body>
 </html>
