--- a/puzzle/sapphire.html
+++ b/puzzle/sapphire.html
@@ -5,6 +5,8 @@
     <title>woah</title>
 </head>
 <body>
-    <p class="puzzle">wip</p>
+    <p class="puzzle">
+        <img src="game/sapphire.jpg" alt="i wonder whats wrong here">
+    </p>
 </body>
 </html>
