--- a/puzzle/project.html
+++ b/puzzle/project.html
@@ -5,6 +5,9 @@
         <title>project (the verb)</title>
     </head>
     <body>
-        <p class="puzzle">wip</p>
+        <div class="puzzle container">
+            <img src="game/project.png" alt="pure numbers">
+        </div>
+        <p class="puzzle">wonder what this means</p>
     </body>
 </html>
