--- a/puzzle/adversities/nineteenninetynine.html
+++ b/puzzle/adversities/nineteenninetynine.html
@@ -2,9 +2,12 @@
 <link rel="stylesheet" type="text/css" href="/style.css">
 <html>
     <head>
-        <title>year of the?</title>
+        <title>chinese (new) year</title>
     </head>
     <body>
-        <p class="puzzle">wip</p>
+        <div class="puzzle container">
+            <img src="1999.png" alt="animal">
+        </div>
+        <p class="puzzle">look everywhere for hints</p>
     </body>
 </html>
