--- a/puzzle/adversities/final.html
+++ b/puzzle/adversities/final.html
@@ -5,6 +5,9 @@
         <title>whar?</title>
     </head>
     <body>
+        <div class="puzzle container">
+            <img src="">
+        </div>
         <p class="puzzle">wip</p>
     </body>
 </html>
