--- a/puzzle/adversities/heat.html
+++ b/puzzle/adversities/heat.html
@@ -10,6 +10,6 @@
         <div class="puzzle container">
             <img src="heat.png">
         </div>
-        <p class="puzzle">time for the classic periodic table level</p>
+        <p class="puzzle">find mistakes. make word.</p>
     </body>
 </html>
