--- a/puzzle/adversities/quick.html
+++ b/puzzle/adversities/quick.html
@@ -8,15 +8,11 @@
     </head>
     <body>
         <script>
-            window.onload = delayedredirect(1000);
+            window.onload = redirect();
             function redirect() {
                 window.location.href = "https://speechincoherent.github.io/puzzle/adversities/final.html"
-            }
-
-            function delayedredirect(delay) {
-                setTimeout(redirect(),delay)
-            }
-            /* /puzzle/zeropointone/antidisestablishmentarianism.html */
+            };
+            /* stylish.html */
         </script>
     </body>
 </html>
