--- a/puzzle/adversities/vegas.html
+++ b/puzzle/adversities/vegas.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="puzzle container">
-            <img src="vegas.png">
+            <img src="vegas.png" alt="initials of levels?">
         </div>
         <p class="puzzle">an a gram</p>
     </body>
