--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -16,10 +16,12 @@
         <button class="main" onclick="redirectHome()">home</button>
     </div>
     <br>
-        <div class="puzDiv container">
+        <div class="puzzle container">
         <img id="titleRandom" alt="no" style="align-content:center;" src="/puzzle/title-1.png" >
         </div>
-        <a href="one.html">play game</a><br><br>
+        <a style="align-self:center;" href="one.html">play game</a><br><br>
         <a href="../">go back</a>
+        <!-- /puzzle/zeropointone/antidisestablishmentarianism.html -->
 </body>
 </html>
+
