--- a/puzzle/adversities/phony.html
+++ b/puzzle/adversities/phony.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="puzzle container">
-            <img src="phony.png" alt="last word of city">
+            <img src="phony.png" alt="last word of city .html">
         </div>
         <p class="puzzle">geolocate</p>
     </body>
