--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -1,27 +1,19 @@
 <link rel="icon" href="../sp.ico">
 <link rel="stylesheet" type="text/css" href="../style.css">
- <html>
-<head>
-    <title>start</title>
-</head>
-<body>
-    <script src="../main.js"></script>
-    <script src="img changer.js"></script>
-    <br>
-    <div class="btngroup">
-        <button class="main" onclick="redirectLinks()">links</button>
-        <button class="main" onclick="redirectContact()">contact</button>
-        <button class="main" type="disabled">game</button>
-        <button class="main" onclick="redirectBlog()">blog</button>
-        <button class="main" onclick="redirectHome()">home</button>
-    </div>
-    <br>
-        <div class="puzzle container">
-        <img id="titleRandom" alt="no" style="align-content:center;" src="/puzzle/title-1.png" >
-        </div>
-        <a style="align-self:center;" href="one.html">play game</a><br><br>
-        <a href="../">go back</a>
-        <!-- /puzzle/zeropointone/antidisestablishmentarianism.html -->
-</body>
+<html>
+    <head>
+        <title>index</title>
+    </head>
+    <body>
+        <div class="btngroup">
+            <button class="main" onclick="redirectLinks()">links</button>
+            <button class="main" type="disabled">contact</button>
+            <button class="main" onclick="redirectGame()">game</button>
+            <button class="main" onclick="redirectBlog()">blog</button>
+            <button class="main" onclick="redirectHome()">home</button>
+        </div> <br>
+        <p class="puzzle">wip, i'm making a new puzzle because the other one was so shit</p> <br>
+        <p class="puzzle">if you want to play the previous one, click <a href="https://speechincoherent.github.io/legacypuzzle/start">here</a>.</p> <br>
+        <p class="puzzle">if not, then give me a while to make the new one</p>
+    </body>
 </html>
-
