--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -5,13 +5,14 @@
         <title>index</title>
     </head>
     <body>
+        <br><br><br>
         <div class="btngroup">
             <button class="main" onclick="redirectLinks()">links</button>
             <button class="main" type="disabled">contact</button>
             <button class="main" onclick="redirectGame()">game</button>
             <button class="main" onclick="redirectBlog()">blog</button>
             <button class="main" onclick="redirectHome()">home</button>
-        </div> <br>
+        </div> <hr>
         <p class="puzzle">wip, i'm making a new puzzle because the other one was so shit</p> <br>
         <p class="puzzle">if you want to play the previous one, click <a href="https://speechincoherent.github.io/legacypuzzle/start">here</a>.</p> <br>
         <p class="puzzle">if not, then give me a while to make the new one</p>
