--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -12,7 +12,7 @@
             <button class="main" onclick="redirectGame()">game</button>
             <button class="main" onclick="redirectBlog()">blog</button>
             <button class="main" onclick="redirectHome()">home</button>
-        </div> <hr>
+        </div> <br> <br> <hr>
         <p class="puzzle">if you want to play the previous one, click <a href="https://speechincoherent.github.io/legacypuzzle/start">here</a>.</p> <br>
         <p class="puzzle">if not, then give me a while to make the new one</p>
     </body>
