starting new puzzle

--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -13,7 +13,9 @@
             <button class="main" onclick="redirectBlog()">blog</button>
             <button class="main" onclick="redirectHome()">home</button>
         </div> <br> <br> <hr>
-        <p class="puzzle">if you want to play the previous one, click <a href="https://speechincoherent.github.io/legacypuzzle/start">here</a>.</p> <br>
-        <p class="puzzle">if not, then give me a while to make the new one</p>
+        <div class="puzzle container">
+            <a href="uno.html"><img src="start.png"></a>
+        </div>
+        <p style="size:small;" class="puzzle">if you want to play the old puzzle, click <a href="https://speechincoherent.github.io/legacypuzzle/start">here</a>.</p> <br>
     </body>
 </html>
