--- a/puzzle/alignment.html
+++ b/puzzle/alignment.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="puzzle container">
-            <img src="alignment.png">
+            <img style="margin-left:25px" src="alignment.png">
         </div>
         <p class="puzzle">the image above is slightly misaligned.</p> <br>
         <p class="puzzle">which direction?</p>
