--- a/puzzle/alignment.html
+++ b/puzzle/alignment.html
@@ -5,8 +5,8 @@
         <title>something's off</title>
     </head>
     <body>
-        <div class="puzzle container">
-            <img style="margin-left:15px" src="alignment.png">
+        <div style="margin-left:15px" class="puzzle container">
+            <img src="alignment.png">
         </div>
         <p class="puzzle">the image above is slightly misaligned.</p> <br>
         <p class="puzzle">which direction?</p>
