--- a/puzzle/physical.html
+++ b/puzzle/physical.html
@@ -2,12 +2,12 @@
 <link rel="stylesheet" type="text/css" href="../style.css">
 <html>
     <head>
-        <title>colors, love em.</title>
+        <title>related to physics?</title>
     </head>
     <body>
         <div class="puzzle container">
-            <img src="balance.png">
+            <img src="physical.png">
         </div>
-        <p class="puzzle">rgb (spell a word from that)</p>
+        <p class="puzzle">try looking at the image differently</p>
     </body>
 </html>
