--- a/puzzle/alignment.html
+++ b/puzzle/alignment.html
@@ -10,5 +10,6 @@
         </div>
         <p class="puzzle">the image above is slightly misaligned.</p> <br>
         <p class="puzzle">which direction?</p>
+        <p class="puzzle">(if image is not misaligned or misaligned wrong, then just guess)</p>
     </body>
 </html>
