--- a/puzzle/physical.html
+++ b/puzzle/physical.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <div class="puzzle container">
-            <img src="physical.png">
+            <img src="">
         </div>
-        <p class="puzzle">try looking at the image differently</p>
+        <p class="puzzle">wip
+        </p>
     </body>
 </html>
