--- a/puzzle/lucky.html
+++ b/puzzle/lucky.html
@@ -2,12 +2,12 @@
 <link rel="stylesheet" type="text/css" href="../style.css">
 <html>
     <head>
-        <title>related to physics?</title>
+        <title>i love GAMBLING</title>
     </head>
     <body>
         <div class="puzzle container">
-            <img src="physical.png">
+            <img src="">
         </div>
-        <p class="puzzle">brighten image</p>
+        <p class="puzzle">wip</p>
     </body>
 </html>
