level 9 + level 10 file + fixes

--- a/puzzle/lucky.html
+++ b/puzzle/lucky.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <div class="puzzle container">
-            <img src="">
+            <img src="lckuy.png">
         </div>
-        <p class="puzzle">wip</p>
+        <p class="puzzle">oh no, it seems i made an error in the source code.</p><br>
+        <p class="puzzle">fix it.</p>
     </body>
 </html>
