level 10 added p, created levelmilestones.js, fixed maranga.html

--- a/puzzle/maranga.html
+++ b/puzzle/maranga.html
@@ -2,13 +2,13 @@
 <link rel="stylesheet" type="text/css" href="../style.css">
 <html>
     <head>
-        <title></title>
+        <title>level 9</title>
     </head>
     <body>
         <div class="puzzle container">
             <img src="maranga.png">
         </div>
-        <p class="puzzle">switch the letters around and put it in the image name</p>
+        <p class="puzzle">switch the letters of this level's name around and put it in the image name</p>
     </body>
 </html>
 
