--- a/puzzle/hydrogen.html
+++ b/puzzle/hydrogen.html
@@ -1,13 +1,15 @@
 <link rel="icon" href="../sp.ico">
 <link rel="stylesheet" type="text/css" href="../style.css">
+<script href="levelmilestones.js"></script>
 <html>
     </head>
         <title>god bless google</title>
     </head>
     <body>
         <div class="puzzle container">
-            <img src="">
+            <img src="hydrogen.png">
         </div>
-        <p class="puzzle">wip</p>
+        <p class="puzzle">this is the last "tutorial" level</p>
+        <p class="puzzle">use all previous knowledge to proceed (+ some googling for some stuff)</p>
     </body>
 </html>
