--- a/puzzle/hydrogen.html
+++ b/puzzle/hydrogen.html
@@ -1,6 +1,6 @@
 <link rel="icon" href="../sp.ico">
 <link rel="stylesheet" type="text/css" href="../style.css">
-<script href="levelmilestones.js"></script>
+<script href="./levelmilestones.js"></script>
 <html>
     </head>
         <title>god bless google</title>
