--- a/puzzle/start.html
+++ b/puzzle/start.html
@@ -14,7 +14,7 @@
             <button class="main" onclick="redirectHome()">home</button>
         </div> <br> <br> <hr>
         <div class="puzzle container">
-            <a href="uno.html"><img src="start.png"></a>
+            <a href="uno.html"><img style="max-width:450px;" src="start.png"></a>
         </div>
         <p style="size:small;" class="puzzle">if you want to play the old puzzle, click <a href="https://speechincoherent.github.io/legacypuzzle/start">here</a>.</p> <br>
     </body>
