--- a/puzzle/uno.html
+++ b/puzzle/uno.html
@@ -9,7 +9,7 @@
             <img src="uno.png" >
         </div>
         <br>
-        <p class="puzzle">welcome, innocent bystander</p> <br>
+        <p class="puzzle">welcome, innocent bystander</p>
         <p class="puzzle">to progress, replace the little part of the url at the end to the answer of the puzzle</p>
         <p class="puzzle">now, what comes after <i>uno</i>?</p>
     </body>
