--- a/puzzle/hydrogen.html
+++ b/puzzle/hydrogen.html
@@ -4,6 +4,9 @@
 <html>
     </head>
         <title>god bless google</title>
+        <script>
+            window.onload = hydrogenCookie()
+        </script>
     </head>
     <body>
         <div class="puzzle container">
