--- a/puzzle/hydrogen.html
+++ b/puzzle/hydrogen.html
@@ -5,7 +5,7 @@
     </head>
         <title>god bless google</title>
         <script>
-            window.onload = hydrogenCookie()
+            window.onload = hydrogenCookie();
         </script>
     </head>
     <body>
